--- a/app/src/main/res/layout/rccord_item1.xml
+++ b/app/src/main/res/layout/rccord_item1.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/moviename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -25,6 +26,7 @@
             android:textSize="@dimen/sp_14" />
 
         <Button
+            android:id="@+id/moviebuy"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_30"
             android:text="去付款"
@@ -47,6 +49,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/ordernumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2545465465465454"
@@ -66,6 +69,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/cinemaname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="保利国际影城"
@@ -85,6 +89,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/moviehall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="中影l Do巨幕全景声厅"
@@ -104,6 +109,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/rccordtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2018-10-11 14:40-16:46"
@@ -123,6 +129,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/rccordnum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2张"
@@ -142,6 +149,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/rccordmoney"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="59.9元"
