--- a/app/src/main/res/layout/popu_advance.xml
+++ b/app/src/main/res/layout/popu_advance.xml
@@ -43,6 +43,47 @@
             android:layout_marginTop="@dimen/dp_20"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/ll4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_100"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_50"
+                android:background="@drawable/shape_yyt2">
+
+                <EditText
+                    android:id="@+id/et_pl"
+                    android:layout_margin="@dimen/dp_10"
+                    android:textSize="@dimen/sp_12"
+                    android:background="@android:color/transparent"
+                    android:textColorHint="#999999"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="写评论"/>
+
+            </LinearLayout>
+
+
+
+            <Button
+                android:id="@+id/fabiaopl"
+                android:layout_width="wrap_content"
+                android:layout_gravity="right"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textSize="@dimen/sp_12"
+                android:background="@drawable/details_btn"
+                android:text="发表"/>
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/ad_return"
             android:layout_width="@dimen/dp_60"
