--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -42,7 +42,8 @@
 
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/ll5"
+                android:layout_width="@dimen/dp_220"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/search_shape"
@@ -65,14 +66,12 @@
                     android:textSize="@dimen/sp_10"
                     android:hint="输入要搜索的影片"
                     android:layout_gravity="center_vertical"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/tv_sou"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffff"
-                    android:visibility="gone"
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/sp_10"
                     android:paddingRight="@dimen/dp_10"
@@ -88,8 +87,61 @@
             android:id="@+id/rcf_cinema_flow"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_223"
-            android:layout_marginTop="@dimen/dp_85"/>
+            android:layout_marginTop="@dimen/dp_85"
+            android:layout_marginBottom="@dimen/dp_15"/>
 
+        <RadioGroup
+            android:id="@+id/rg_ll"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_3"
+            android:background="@drawable/lineone"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true">
+
+            <RadioButton
+                android:id="@+id/home_radio_1"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:checked="true"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+            <RadioButton
+                android:id="@+id/home_radio_2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+            <RadioButton
+                android:id="@+id/home_radio_3"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+            <RadioButton
+                android:id="@+id/home_radio_4"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+            <RadioButton
+                android:id="@+id/home_radio_5"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+            <RadioButton
+                android:id="@+id/home_radio_6"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:button="@null"
+                android:background="@drawable/radio_selector"
+                android:layout_height="match_parent"/>
+        </RadioGroup>
     </RelativeLayout>
 
         <!--  111111111111111111111111111111111111111111111111-->
