--- a/app/src/main/res/layout/popu_cinema.xml
+++ b/app/src/main/res/layout/popu_cinema.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#00000000">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/dp_110"
@@ -30,6 +30,7 @@
             android:gravity="center">
 
             <RadioButton
+                android:id="@+id/rb1"
                 android:textSize="@dimen/sp_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="wrap_content" />
             <RadioButton
+                android:id="@+id/rb2"
                 android:textSize="@dimen/sp_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,6 +62,8 @@
 
 
         <LinearLayout
+            android:id="@+id/ll6"
+            android:layout_marginTop="@dimen/dp_80"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -133,8 +137,21 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll7"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_80"
+            android:visibility="gone"
+            android:layout_height="match_parent">
 
 
-    </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
