--- a/app/src/main/res/layout/popu_advance.xml
+++ b/app/src/main/res/layout/popu_advance.xml
@@ -102,5 +102,30 @@
             android:layout_marginBottom="@dimen/dp_20"
             android:background="@android:color/transparent"
             android:src="@drawable/publish_defaulti" />
+
+        <LinearLayout
+            android:id="@+id/ll8"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_60"
+            android:layout_alignParentBottom="true"
+            android:background="#fff"
+            android:visibility="gone"
+            android:layout_marginBottom="@dimen/dp_20">
+
+            <EditText
+                android:id="@+id/et_pl2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:hint="回复评论"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/huifu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="回复"/>
+
+        </LinearLayout>
+
     </RelativeLayout>
 </RelativeLayout>
