--- a/app/src/main/res/layout/popu_cinema.xml
+++ b/app/src/main/res/layout/popu_cinema.xml
@@ -146,6 +146,7 @@
 
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/list8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
