--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,7 @@
 
         <RadioButton
             android:id="@+id/home_rb1"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/film_sel"
@@ -31,6 +32,7 @@
             android:button="@null"/>
 
         <RadioButton
+            android:layout_marginTop="@dimen/dp_10"
             android:id="@+id/home_rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,6 +43,7 @@
 
         <RadioButton
             android:id="@+id/home_rb3"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/my_sel"
